# pixel-vectorization-4102

./: CMakeLists.txt  DisplayLargeSVG.html  README.md
include/: AntiAliasClean.h  EdgeDetection.h  GenerateSvg.h  Hybrid.h  Node.h  PixelGraph.h  Polygon.h
input/: cat and dog.xcf
src/: AntiAliasClean.cpp  EdgeDetection.cpp  GenerateSvg.cpp  Hybrid.cpp  Main.cpp  Node.cpp  PixelGraph.cpp  Polygon.cpp
